fix(city3d) : covered the page

--- a/src/components/City3D/City3D.module.scss
+++ b/src/components/City3D/City3D.module.scss
@@ -1,75 +1,96 @@
-body {
-  color: white;
-  margin: 0;
-  text-align: center;
-  background-color: black;
-  cursor: crosshair;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+// body {
+//   color: white;
+//   margin: 0;
+//   text-align: center;
+//   background-color: black;
+//   cursor: crosshair;
+//   height: 100vh;  // تنظیم برای 100% ارتفاع صفحه
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+// canvas {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;  // قرار دادن canvas به صورت لایه پشت صفحه
+//   top: 0;
+//   left: 0;
+// }
+
+// .city3d_header {
+//   position: absolute;
+//   top: 42%;
+//   width: 100%;
+// }
+
+// .city3d_header .headerContent {
+//   padding: 10px;
+//   background-color: #FF7517;
+//   border-radius: 10px;
+// }
+
+// .city3d_footer {
+//   position: absolute;
+//   bottom: 3%;
+//   width: 100%;
+// }
+
+// .description {
+//   color: gray;
+//   padding-top: 10px;
+// }
+
+// a, a:hover, a:visited {
+//   color: white;
+//   text-decoration: none;
+// }
+
+// .disable-selection {
+//   -moz-user-select: none; 
+//   -ms-user-select: none;
+//   -khtml-user-select: none;
+//   -webkit-user-select: none; 
+//   -webkit-touch-callout: none;
+// }
+
+// h1::after {
+//   content: ' Three JS';
+//   font-size: 12px;
+//   position: absolute;
+//   top: 3px;
+//   padding-left: 5px;
+//   font-weight: 400;
+// }
+
+// h2::after {
+//   content: '2';
+//   font-size: 12px;
+//   position: absolute;
+//   top: 14px;
+//   padding-left: 5px;
+// }
+
+// .btn {
+//   border-radius: 10px;
+//   padding: 10px 25px;
+// }
+
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* جلوگیری از ایجاد اسکرول */
 }
 
 canvas {
-  display: block;
-  width: 100%;
-  height: 100%;
+    display: block; /* حذف حاشیه‌های پیش‌فرض */
 }
 
-// p {
-//   color: "#FF7517";
-// }
-
-.city3d_header {
-  top: 42%;
-}
-
-.city3d_header .headerContent {
-  padding: 10px;
-  background-color: "#FF7517";
-  border-radius: 10px;
-}
-
-.city3d_footer {
-  bottom: 3%;
-}
-
-.description {
-  color: gray;
-  padding-top: 10px;
-}
-
-a, a:hover, a:visited {
-  color: white;
-  text-decoration: none;
-}
-
-.disable-selection {
-  -moz-user-select: none; 
-  -ms-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none; 
-  -webkit-touch-callout: none;
-}
-
-h1::after {
-  content: ' Three JS';
-  font-size: 12px;
-  position: absolute;
-  top: 3px;
-  padding-left: 5px;
-  font-weight: 400;
-}
-
-h2::after {
-  content: '2';
-  font-size: 12px;
-  position: absolute;
-  top: 14px;
-  padding-left: 5px;
-}
-
-.btn {
-  border-radius: 10px;
-  padding: 10px 25px;
+.intro, .visual {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
